9609 qede: error: result of '983040 << 16' requires 37 bits to represent, but 'int' only has 32 bits Contributed by: Anand Khoje <Anand.Khoje@cavium.com> Reviewed by: Andy Fiddaman <af@citrus-it.net> Approved by: Dan McDonald <danmcd@joyent.com>